# gpl-free-basebuild

./: .gitignore  Dockerfile  LICENSE  README.md
.codefresh/: codefresh.yaml
cawf/: Makefile  Makefile.am  Makefile.in  cawf.h  cawflib.h  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  device.c
heirloom-070715/: Makefile
heirloom-070715/_install/: Makefile  install.1b  install_ucb
heirloom-070715/banner/: Makefile  banner
heirloom-070715/basename/: Makefile  basename  basename_sus  basename_ucb
heirloom-070715/bc/: Makefile  bc
heirloom-070715/bdiff/: Makefile  bdiff
heirloom-070715/bfs/: Makefile  bfs
heirloom-070715/cal/: Makefile  cal
heirloom-070715/calendar/: Makefile  calprog
heirloom-070715/cat/: Makefile  cat
heirloom-070715/chmod/: Makefile  chmod  chmod_sus
heirloom-070715/chown/: Makefile  chown  chown_ucb
heirloom-070715/cksum/: Makefile  cksum
heirloom-070715/cmp/: Makefile  cmp
heirloom-070715/col/: Makefile  col
heirloom-070715/comm/: Makefile  comm
heirloom-070715/copy/: Makefile  copy
heirloom-070715/cp/: Makefile  cp  cp_s42  cp_sus  ln_s42  mv_sus
heirloom-070715/cpio/: Makefile  cpio  cpio.c  pax  pax_su3
heirloom-070715/csplit/: Makefile  csplit  csplit_su3  csplit_sus
heirloom-070715/cut/: Makefile  cut
heirloom-070715/date/: Makefile  date  date_sus
heirloom-070715/dc/: Makefile  dc
heirloom-070715/dd/: Makefile  dd
heirloom-070715/deroff/: Makefile  deroff  deroff_ucb
heirloom-070715/df/: Makefile  df  df_ucb
heirloom-070715/diff/: Makefile  diff  diffh
(+301 files in other folders)
