bin_PROGRAMS = cawf bsfilt
bsfilt_SOURCES = bsfilt.c  device.c  error.c  expand.c  expr.c  getopt.c  macsup.c  nreq.c  output.c  pass2.c  pass3.c  regerror.c  regexp.c  store.c  string.c
cawf_SOURCES = cawf.c  device.c  error.c  expand.c  expr.c  getopt.c  macsup.c  nreq.c  output.c  pass2.c  pass3.c  regerror.c  regexp.c  store.c  string.c
cawf_DATA = common dumb.dev mandoc.mac me.mac ms.mac
cawfdir = $(libdir)/cawf
